--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
 	</head>
 	<body>
 		<header>
-			<h1>Header</h1>
+			<h1>Flower</h1>
 		</header>
 			<section id="content">
 				<canvas id="OriginalFractal" data-processing-sources="OriginalFractal.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    Footer
+		    Works with the scroll wheel on Processing Java, however Due to limitations on PJS only key press will be handled so <br>
+		    Use "W" to "scroll down" and "S" to "scroll up".
 	    </footer>
 	</body>
 </html>
